home page + navigation pages

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <body>
         <div id="header">
             <span id="home" style="float: left;">
-                <a href="">home</a>
+                <a href="index.html">home</a>
             </span>
             <span id="nav" style="float: right;">
                 <ul>
@@ -19,20 +19,8 @@
             <div style="clear:both;"></div>
         </div>
 
-        <div id="content">
-            <div id="titles">
-                <h1>hi, i'm meg!</h1>
-                <h1>i create things with code.</h1>
-    
-                <a href="about.html">about</a>
-                <a href="projects.html">projects</a>
-                <a href="braindump.html">braindump</a>
-            </div>
-        </div>
-
-        <div id="footer">
-            <p>bringing light to the small things.</p>
-            <p>2 © 2 3</p>
+        <div id="titles">
+            <h1>projects</h1>            
         </div>
     </body>
 </html>
