--- a/about.html
+++ b/about.html
@@ -2,12 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="./styles.css"/>
-        <title>meg hsu</title>
     </head>
     <body>
         <div id="header">
             <span id="home" style="float: left;">
-                <a href="">home</a>
+                <a href="index.html">home</a>
             </span>
             <span id="nav" style="float: right;">
                 <ul>
@@ -19,20 +18,9 @@
             <div style="clear:both;"></div>
         </div>
 
-        <div id="content">
-            <div id="titles">
-                <h1>hi, i'm meg!</h1>
-                <h1>i create things with code.</h1>
-    
-                <a href="about.html">about</a>
-                <a href="projects.html">projects</a>
-                <a href="braindump.html">braindump</a>
-            </div>
-        </div>
-
-        <div id="footer">
-            <p>bringing light to the small things.</p>
-            <p>2 © 2 3</p>
+        <div id="titles">
+            <h1>about</h1>
+            <p>my name is meg hsu, and i'm a student from the bay area in california.</p>
         </div>
     </body>
 </html>
