--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div id="footer">
-            <p>bringing light to the small things.</p>
+            <p>bringing light through the little things.</p>
             <p>2 © 2 3</p>
         </div>
     </body>
